--- a/docs/rtk-query/usage/error-handling.mdx
+++ b/docs/rtk-query/usage/error-handling.mdx
@@ -93,7 +93,13 @@ export const rtkQueryErrorLogger: Middleware =
     // RTK Query uses `createAsyncThunk` from redux-toolkit under the hood, so we're able to utilize these matchers!
     if (isRejectedWithValue(action)) {
       console.warn('We got a rejected action!')
-      toast.warn({ title: 'Async error!', message: action.error.data.message })
+      toast.warn({
+        title: 'Async error!',
+        message:
+          'data' in action.error
+            ? (action.error.data as { message: string }).message
+            : action.error.message,
+      })
     }
 
     return next(action)
