--- a/docs/api/getDefaultMiddleware.mdx
+++ b/docs/api/getDefaultMiddleware.mdx
@@ -104,7 +104,7 @@ const middleware = [thunk]
 
 `getDefaultMiddleware` accepts an options object that allows customizing each middleware in two ways:
 
-- Each middleware can be excluded the result array by passing `false` for its corresponding field
+- Each middleware can be excluded from the result array by passing `false` for its corresponding field
 - Each middleware can have its options customized by passing the matching options object for its corresponding field
 
 This example shows excluding the serializable state check middleware, and passing a specific value for the thunk
