--- a/docs/api/getDefaultEnhancers.mdx
+++ b/docs/api/getDefaultEnhancers.mdx
@@ -60,7 +60,7 @@ const store = configureStore({
 
 The resulting array will always contain the `applyMiddleware` enhancer created based on the `configureStore`'s `middleware` field.
 
-Additionally, the [`autoBatchEnhancer`](./autoBatchEnhancer.mdx) is included, to allow for "batching" of low priority action updates. This is used by [RTK Query](/rtk-query/overview.mdx) and should improve performance when using it.
+Additionally, the [`autoBatchEnhancer`](./autoBatchEnhancer.mdx) is included, to allow for "batching" of low priority action updates. This is used by [RTK Query](/rtk-query/overview.md) and should improve performance when using it.
 
 Currently, the return value is
 
