--- a/docs/api/createEntityAdapter.mdx
+++ b/docs/api/createEntityAdapter.mdx
@@ -228,7 +228,6 @@ All three options will insert _new_ entities into the list. However they differ 
 
 :::
 
-
 Each method has a signature that looks like:
 
 ```ts no-transpile
@@ -284,9 +283,36 @@ The entity adapter will contain a `getSelectors()` function that returns a set o
 
 Each selector function will be created using the `createSelector` function from Reselect, to enable memoizing calculation of the results.
 
+:::tip
+
+The `createSelector` instance used can be replaced, by passing it as a second parameter:
+
+```js
+import {
+  createDraftSafeSelectorCreator,
+  weakMapMemoize,
+} from '@reduxjs/toolkit'
+
+const createWeakMapDraftSafeSelector =
+  createDraftSafeSelectorCreator(weakMapMemoize)
+
+const simpleSelectors = booksAdapter.getSelectors(
+  undefined,
+  createWeakMapDraftSafeSelector
+)
+const globalizedSelectors = booksAdapter.getSelectors(
+  (state) => state.books,
+  createWeakMapDraftSafeSelector
+)
+```
+
+If no instance is passed, it will default to [`createDraftSafeSelector`](./createSelector#createDraftSafeSelector).
+
+:::
+
 Because selector functions are dependent on knowing where in the state tree this specific entity state object is kept, `getSelectors()` can be called in two ways:
 
-- If called without any arguments, it returns an "unglobalized" set of selector functions that assume their `state` argument is the actual entity state object to read from.
+- If called without any arguments (or with undefined as the first parameter), it returns an "unglobalized" set of selector functions that assume their `state` argument is the actual entity state object to read from.
 - It may also be called with a selector function that accepts the entire Redux state tree and returns the correct entity state object.
 
 For example, the entity state for a `Book` type might be kept in the Redux state tree as `state.books`. You can use `getSelectors()` to read from that state in two ways:
@@ -358,12 +384,8 @@ const booksSlice = createSlice({
   },
 })
 
-const {
-  bookAdded,
-  booksLoading,
-  booksReceived,
-  bookUpdated,
-} = booksSlice.actions
+const { bookAdded, booksLoading, booksReceived, bookUpdated } =
+  booksSlice.actions
 
 const store = configureStore({
   reducer: {
