--- a/docs/api/createSelector.mdx
+++ b/docs/api/createSelector.mdx
@@ -62,3 +62,25 @@ After executing that, `unsafe1` and `unsafe2` will be of the same value, because
 executed on the same object - but `safe2` will actually be different from `safe1` (with the updated value of `2`),
 because the safe selector detected that it was executed on a Immer draft object and recalculated using the current
 value instead of returning a cached value.
+
+:::tip `createDraftSafeSelectorCreator`
+
+RTK also exports a `createDraftSafeSelectorCreator` function, the "draft safe" equivalent of [`createSelectorCreator`](https://github.com/reduxjs/reselect#createselectorcreatormemoize-memoizeoptions).
+
+```js
+import {
+  createDraftSafeSelectorCreator,
+  weakMapMemoize,
+} from '@reduxjs/toolkit'
+
+const createWeakMapDraftSafeSelector =
+  createDraftSafeSelectorCreator(weakMapMemoize)
+
+const selectSelf = (state: State) => state
+const draftSafeSelector = createWeakMapDraftSafeSelector(
+  selectSelf,
+  (state) => state.value
+)
+```
+
+:::
